syntax = "proto3";

service Tasks {
    rpc Deploy(DeployRequest) returns (DeployResponse) {}
    rpc Undeploy(UndeployRequest) returns (UndeployResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
    rpc Hosts(HostsRequest) returns (HostsResponse) {}
}

message Resources {
    string memory = 1;
    float CPU = 2;
    int32 instances = 3;
    repeated string volumes = 4;
}

message DeployRequest {
    string name = 1;
    string image = 2;
    repeated string command = 3;
    Resources resources = 4;
    repeated string env = 5;
    repeated string nodes = 6;
}

message DeployResponse {
    string status = 1;
}

message UndeployRequest {
    string name = 1;
}

message UndeployResponse {
    string status = 1;
}

message ListRequest {
    string id = 1;
}

message List {
    string host = 1;
    string name = 2;
    string image = 3;
    string port = 4;
    string ip = 5;
}
message ListResponse {
    repeated List list = 1;
}

message HostsRequest {}

message Host {
    string id = 1;
    string node = 2;
    string address = 3;
}

message HostsResponse {
    repeated Host hosts = 1;
}